# banana-mall

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  start_app.sh  tailwind.config.js  test-app.js  todo.md  vite.config.ts  用户使用手册.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/hooks/: useTauriStore.ts  useTheme.ts
src/lib/: api-detail.ts  api-mock.ts  api.ts  export.ts  i18n.ts
src/pages/: ConfigPage.tsx  EditorPage.tsx  GeneratingPage.tsx  HistoryPage.tsx  SettingsPage.tsx  UploadPage.tsx
src/stores/: useAppStore.ts
